<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/curved_shape"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageView_condition"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/example_img"
        app:tint="@color/material_on_surface_emphasis_high_type"
        android:contentDescription="@string/temperature_logo"
        android:layout_marginStart="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_info_day_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/sat_1_jun"
            android:textSize="11sp"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/textView_temp_min_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_max_min_example"
            android:textSize="11sp"
            android:maxLines="1"
            />


    </LinearLayout>


</LinearLayout>