<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bunny.weather.weago.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="6dp"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleMarginStart="16dp"
            app:expandedTitleMarginEnd="16dp"
            app:expandedTitleMarginBottom="16dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:layout_collapseMode="pin"
                />

            <!-- Location, Date, Last Updated, and Getting Location -->

            <LinearLayout
                android:id="@+id/linear_1_getting_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:padding="26dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_collapseMode="parallax">
                <LinearLayout
                    android:id="@+id/linear_2_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="invisible"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/textView_location_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:contentDescription="@string/location_logo"
                        android:src="@drawable/ic_location"
                        app:tint="@color/material_on_surface_emphasis_high_type" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/date"
                    android:textSize="13sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView_last_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/last_updated"
                    android:textSize="13sp"
                    android:visibility="invisible" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipeRefreshLayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <RelativeLayout
                    android:id="@+id/relative_3_current_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curved_shape"
                    android:padding="20dp"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/textViewNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-10dp"
                        android:text="@string/now"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/textView_current_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewNow"
                        android:text="@string/sample_degree"
                        android:textSize="45sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView_current_temp"
                        android:text="@string/feels_like_example"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView_condition"
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:layout_marginTop="-20dp"
                            android:contentDescription="@string/temperature_logo"
                            android:src="@drawable/example_img"
                            app:tint="@color/material_on_surface_emphasis_high_type" />

                        <TextView
                            android:id="@+id/textView_condition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/condition"
                            android:textAlignment="center"
                            android:textSize="15sp" />

                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView_7_day_forecast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/relative_3_current_temp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/_7_days_forecast"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_7_day_forecast"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView_additional_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recyclerView_forecast"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/additional_info"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_extra_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView_additional_info"
                    android:visibility="invisible" />

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
